// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChooseChannelTemplate Client-side validation triggers 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      aria-labelledby="error-summary-title"
      class="nhsuk-error-summary"
      role="alert"
      tabindex="-1"
    >
      <h2
        class="nhsuk-error-summary__title"
        data-testid="error-summary"
        id="error-summary-title"
      >
        There is a problem
      </h2>
      <div
        class="nhsuk-hint"
      >
        You have not chosen a template
      </div>
      <ul
        class="nhsuk-list nhsuk-error-summary__list"
      >
        <li>
          <a
            href="#channelTemplate"
          >
            Choose an NHS App template
          </a>
        </li>
      </ul>
    </div>
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <span
          class="nhsuk-caption-l"
        >
          Autumn Campaign Plan
        </span>
        <h1
          class="nhsuk-heading-l"
        >
          Choose an NHS App template
        </h1>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-channel-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-grid-row"
          >
            <div
              class="nhsuk-grid-column-full"
            >
              <div
                class="nhsuk-hint"
              >
                Choose one option
              </div>
              <div
                class="nhsuk-form-group nhsuk-form-group--error"
              >
                <span
                  class="nhsuk-error-message"
                  id="channelTemplate--error-message"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Error: 
                  </span>
                  Choose an NHS App template
                </span>
                <div
                  aria-describedby="channelTemplate--error-message"
                  class="nhsuk-radios"
                  id="channelTemplate"
                >
                  <table
                    class="nhsuk-table-responsive"
                    data-testid="channel-templates-table"
                    id="channel-templates-table"
                  >
                    <thead
                      class="nhsuk-table__head"
                      role="rowgroup"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-select"
                          scope="col"
                        >
                          Select
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-name"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-type"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-last-edited"
                          scope="col"
                        >
                          Last edited
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-action"
                          scope="col"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="nhsuk-table__body"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-radios__item"
                          >
                            <input
                              class="nhsuk-radios__input"
                              data-testid="app-template-id-radio"
                              id="channelTemplate-app-template-id"
                              name="channelTemplate"
                              type="radio"
                              value="app-template-id"
                            />
                            <label
                              class="nhsuk-label nhsuk-radios__label"
                              for="channelTemplate-app-template-id"
                              id="channelTemplate-app-template-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          app template name
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          NHS App message
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <div
                            class="actionLinksWrapper"
                          >
                            <a
                              aria-label="Preview"
                              data-testid="app-template-id-preview-link"
                              href="/message-plans/choose-nhs-app-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/app-template-id"
                              id="preview-template-link-0"
                            >
                              Preview
                            </a>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <button
              aria-disabled="false"
              class="nhsuk-button"
              data-testid="submit-button"
              id="channel-template-submit-button"
              type="submit"
            >
              Save and continue
            </button>
            <a
              class="nhsuk-u-font-size-19 inline-block nhsuk-u-margin-left-3 nhsuk-u-padding-top-3"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ChooseChannelTemplate renders correctly when no templates are available 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <span
          class="nhsuk-caption-l"
        >
          Autumn Campaign Plan
        </span>
        <h1
          class="nhsuk-heading-l"
        >
          Choose an NHS App template
        </h1>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-channel-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <p>
            You do not have any templates yet.
          </p>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <p>
              <a
                class="nhsuk-u-font-size-19"
                href="/message-templates"
              >
                Go to templates
              </a>
            </p>
            <a
              class="nhsuk-u-font-size-19 false"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ChooseChannelTemplate renders correctly when template is unselected 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <span
          class="nhsuk-caption-l"
        >
          Autumn Campaign Plan
        </span>
        <h1
          class="nhsuk-heading-l"
        >
          Choose an NHS App template
        </h1>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-channel-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-grid-row"
          >
            <div
              class="nhsuk-grid-column-full"
            >
              <div
                class="nhsuk-hint"
              >
                Choose one option
              </div>
              <div
                class="nhsuk-form-group"
              >
                <div
                  class="nhsuk-radios"
                  id="channelTemplate"
                >
                  <table
                    class="nhsuk-table-responsive"
                    data-testid="channel-templates-table"
                    id="channel-templates-table"
                  >
                    <thead
                      class="nhsuk-table__head"
                      role="rowgroup"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-select"
                          scope="col"
                        >
                          Select
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-name"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-type"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-last-edited"
                          scope="col"
                        >
                          Last edited
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-action"
                          scope="col"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="nhsuk-table__body"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-radios__item"
                          >
                            <input
                              class="nhsuk-radios__input"
                              data-testid="app-template-id-radio"
                              id="channelTemplate-app-template-id"
                              name="channelTemplate"
                              type="radio"
                              value="app-template-id"
                            />
                            <label
                              class="nhsuk-label nhsuk-radios__label"
                              for="channelTemplate-app-template-id"
                              id="channelTemplate-app-template-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          app template name
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          NHS App message
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <div
                            class="actionLinksWrapper"
                          >
                            <a
                              aria-label="Preview"
                              data-testid="app-template-id-preview-link"
                              href="/message-plans/choose-nhs-app-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/app-template-id"
                              id="preview-template-link-0"
                            >
                              Preview
                            </a>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <button
              aria-disabled="false"
              class="nhsuk-button"
              data-testid="submit-button"
              id="channel-template-submit-button"
              type="submit"
            >
              Save and continue
            </button>
            <a
              class="nhsuk-u-font-size-19 inline-block nhsuk-u-margin-left-3 nhsuk-u-padding-top-3"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ChooseChannelTemplate renders email form 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <span
          class="nhsuk-caption-l"
        >
          Autumn Campaign Plan
        </span>
        <h1
          class="nhsuk-heading-l"
        >
          Choose an email template
        </h1>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-channel-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <dl
            class="nhsuk-summary-list"
            data-testid="previous-selection-summary"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Previously selected template
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                email template name
              </dd>
            </div>
          </dl>
          <div
            class="nhsuk-grid-row"
          >
            <div
              class="nhsuk-grid-column-full"
            >
              <div
                class="nhsuk-hint"
              >
                Choose one option
              </div>
              <div
                class="nhsuk-form-group"
              >
                <div
                  class="nhsuk-radios"
                  id="channelTemplate"
                >
                  <table
                    class="nhsuk-table-responsive"
                    data-testid="channel-templates-table"
                    id="channel-templates-table"
                  >
                    <thead
                      class="nhsuk-table__head"
                      role="rowgroup"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-select"
                          scope="col"
                        >
                          Select
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-name"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-type"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-last-edited"
                          scope="col"
                        >
                          Last edited
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-action"
                          scope="col"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="nhsuk-table__body"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-radios__item"
                          >
                            <input
                              checked=""
                              class="nhsuk-radios__input"
                              data-testid="email-template-id-radio"
                              id="channelTemplate-email-template-id"
                              name="channelTemplate"
                              type="radio"
                              value="email-template-id"
                            />
                            <label
                              class="nhsuk-label nhsuk-radios__label"
                              for="channelTemplate-email-template-id"
                              id="channelTemplate-email-template-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          email template name
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Email
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <div
                            class="actionLinksWrapper"
                          >
                            <a
                              aria-label="Preview"
                              data-testid="email-template-id-preview-link"
                              href="/message-plans/choose-email-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/email-template-id"
                              id="preview-template-link-0"
                            >
                              Preview
                            </a>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <button
              aria-disabled="false"
              class="nhsuk-button"
              data-testid="submit-button"
              id="channel-template-submit-button"
              type="submit"
            >
              Save and continue
            </button>
            <a
              class="nhsuk-u-font-size-19 inline-block nhsuk-u-margin-left-3 nhsuk-u-padding-top-3"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ChooseChannelTemplate renders error component 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      aria-labelledby="error-summary-title"
      class="nhsuk-error-summary"
      role="alert"
      tabindex="-1"
    >
      <h2
        class="nhsuk-error-summary__title"
        data-testid="error-summary"
        id="error-summary-title"
      >
        There is a problem
      </h2>
      <div
        class="nhsuk-hint"
      >
        You have not chosen a template
      </div>
      <ul
        class="nhsuk-list nhsuk-error-summary__list"
      >
        <li>
          <a
            href="#channelTemplate"
          >
            You must select a template
          </a>
        </li>
      </ul>
    </div>
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <span
          class="nhsuk-caption-l"
        >
          Autumn Campaign Plan
        </span>
        <h1
          class="nhsuk-heading-l"
        >
          Choose an NHS App template
        </h1>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-channel-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <dl
            class="nhsuk-summary-list"
            data-testid="previous-selection-summary"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Previously selected template
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                app template name
              </dd>
            </div>
          </dl>
          <div
            class="nhsuk-grid-row"
          >
            <div
              class="nhsuk-grid-column-full"
            >
              <div
                class="nhsuk-hint"
              >
                Choose one option
              </div>
              <div
                class="nhsuk-form-group nhsuk-form-group--error"
              >
                <span
                  class="nhsuk-error-message"
                  id="channelTemplate--error-message"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Error: 
                  </span>
                  You must select a template
                </span>
                <div
                  aria-describedby="channelTemplate--error-message"
                  class="nhsuk-radios"
                  id="channelTemplate"
                >
                  <table
                    class="nhsuk-table-responsive"
                    data-testid="channel-templates-table"
                    id="channel-templates-table"
                  >
                    <thead
                      class="nhsuk-table__head"
                      role="rowgroup"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-select"
                          scope="col"
                        >
                          Select
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-name"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-type"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-last-edited"
                          scope="col"
                        >
                          Last edited
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-action"
                          scope="col"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="nhsuk-table__body"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-radios__item"
                          >
                            <input
                              checked=""
                              class="nhsuk-radios__input"
                              data-testid="app-template-id-radio"
                              id="channelTemplate-app-template-id"
                              name="channelTemplate"
                              type="radio"
                              value="app-template-id"
                            />
                            <label
                              class="nhsuk-label nhsuk-radios__label"
                              for="channelTemplate-app-template-id"
                              id="channelTemplate-app-template-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          app template name
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          NHS App message
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <div
                            class="actionLinksWrapper"
                          >
                            <a
                              aria-label="Preview"
                              data-testid="app-template-id-preview-link"
                              href="/message-plans/choose-nhs-app-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/app-template-id"
                              id="preview-template-link-0"
                            >
                              Preview
                            </a>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <button
              aria-disabled="false"
              class="nhsuk-button"
              data-testid="submit-button"
              id="channel-template-submit-button"
              type="submit"
            >
              Save and continue
            </button>
            <a
              class="nhsuk-u-font-size-19 inline-block nhsuk-u-margin-left-3 nhsuk-u-padding-top-3"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ChooseChannelTemplate renders letter form 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <span
          class="nhsuk-caption-l"
        >
          Autumn Campaign Plan
        </span>
        <h1
          class="nhsuk-heading-l"
        >
          Choose a letter template
        </h1>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-channel-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <dl
            class="nhsuk-summary-list"
            data-testid="previous-selection-summary"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Previously selected template
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                letter template name
              </dd>
            </div>
          </dl>
          <div
            class="nhsuk-grid-row"
          >
            <div
              class="nhsuk-grid-column-full"
            >
              <div
                class="nhsuk-hint"
              >
                Choose one option
              </div>
              <div
                class="nhsuk-form-group"
              >
                <div
                  class="nhsuk-radios"
                  id="channelTemplate"
                >
                  <table
                    class="nhsuk-table-responsive"
                    data-testid="channel-templates-table"
                    id="channel-templates-table"
                  >
                    <thead
                      class="nhsuk-table__head"
                      role="rowgroup"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-select"
                          scope="col"
                        >
                          Select
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-name"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-type"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-last-edited"
                          scope="col"
                        >
                          Last edited
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-action"
                          scope="col"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="nhsuk-table__body"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-radios__item"
                          >
                            <input
                              checked=""
                              class="nhsuk-radios__input"
                              data-testid="letter-template-id-radio"
                              id="channelTemplate-letter-template-id"
                              name="channelTemplate"
                              type="radio"
                              value="letter-template-id"
                            />
                            <label
                              class="nhsuk-label nhsuk-radios__label"
                              for="channelTemplate-letter-template-id"
                              id="channelTemplate-letter-template-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          letter template name
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Standard letter
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <div
                            class="actionLinksWrapper"
                          >
                            <a
                              aria-label="Preview"
                              data-testid="letter-template-id-preview-link"
                              href="/message-plans/choose-standard-english-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/letter-template-id"
                              id="preview-template-link-0"
                            >
                              Preview
                            </a>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <button
              aria-disabled="false"
              class="nhsuk-button"
              data-testid="submit-button"
              id="channel-template-submit-button"
              type="submit"
            >
              Save and continue
            </button>
            <a
              class="nhsuk-u-font-size-19 inline-block nhsuk-u-margin-left-3 nhsuk-u-padding-top-3"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ChooseChannelTemplate renders multiple options 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <span
          class="nhsuk-caption-l"
        >
          Autumn Campaign Plan
        </span>
        <h1
          class="nhsuk-heading-l"
        >
          Choose an NHS App template
        </h1>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-channel-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <dl
            class="nhsuk-summary-list"
            data-testid="previous-selection-summary"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Previously selected template
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                app template name
              </dd>
            </div>
          </dl>
          <div
            class="nhsuk-grid-row"
          >
            <div
              class="nhsuk-grid-column-full"
            >
              <div
                class="nhsuk-hint"
              >
                Choose one option
              </div>
              <div
                class="nhsuk-form-group"
              >
                <div
                  class="nhsuk-radios"
                  id="channelTemplate"
                >
                  <table
                    class="nhsuk-table-responsive"
                    data-testid="channel-templates-table"
                    id="channel-templates-table"
                  >
                    <thead
                      class="nhsuk-table__head"
                      role="rowgroup"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-select"
                          scope="col"
                        >
                          Select
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-name"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-type"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-last-edited"
                          scope="col"
                        >
                          Last edited
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-action"
                          scope="col"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="nhsuk-table__body"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-radios__item"
                          >
                            <input
                              checked=""
                              class="nhsuk-radios__input"
                              data-testid="app-template-id-radio"
                              id="channelTemplate-app-template-id"
                              name="channelTemplate"
                              type="radio"
                              value="app-template-id"
                            />
                            <label
                              class="nhsuk-label nhsuk-radios__label"
                              for="channelTemplate-app-template-id"
                              id="channelTemplate-app-template-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          app template name
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          NHS App message
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <div
                            class="actionLinksWrapper"
                          >
                            <a
                              aria-label="Preview"
                              data-testid="app-template-id-preview-link"
                              href="/message-plans/choose-nhs-app-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/app-template-id"
                              id="preview-template-link-0"
                            >
                              Preview
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-radios__item"
                          >
                            <input
                              class="nhsuk-radios__input"
                              data-testid="another-id-radio"
                              id="channelTemplate-another-id"
                              name="channelTemplate"
                              type="radio"
                              value="another-id"
                            />
                            <label
                              class="nhsuk-label nhsuk-radios__label"
                              for="channelTemplate-another-id"
                              id="channelTemplate-another-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          Another template
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          NHS App message
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <div
                            class="actionLinksWrapper"
                          >
                            <a
                              aria-label="Preview"
                              data-testid="another-id-preview-link"
                              href="/message-plans/choose-nhs-app-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/another-id"
                              id="preview-template-link-1"
                            >
                              Preview
                            </a>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <button
              aria-disabled="false"
              class="nhsuk-button"
              data-testid="submit-button"
              id="channel-template-submit-button"
              type="submit"
            >
              Save and continue
            </button>
            <a
              class="nhsuk-u-font-size-19 inline-block nhsuk-u-margin-left-3 nhsuk-u-padding-top-3"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ChooseChannelTemplate renders nhs app form 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <span
          class="nhsuk-caption-l"
        >
          Autumn Campaign Plan
        </span>
        <h1
          class="nhsuk-heading-l"
        >
          Choose an NHS App template
        </h1>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-channel-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <dl
            class="nhsuk-summary-list"
            data-testid="previous-selection-summary"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Previously selected template
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                app template name
              </dd>
            </div>
          </dl>
          <div
            class="nhsuk-grid-row"
          >
            <div
              class="nhsuk-grid-column-full"
            >
              <div
                class="nhsuk-hint"
              >
                Choose one option
              </div>
              <div
                class="nhsuk-form-group"
              >
                <div
                  class="nhsuk-radios"
                  id="channelTemplate"
                >
                  <table
                    class="nhsuk-table-responsive"
                    data-testid="channel-templates-table"
                    id="channel-templates-table"
                  >
                    <thead
                      class="nhsuk-table__head"
                      role="rowgroup"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-select"
                          scope="col"
                        >
                          Select
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-name"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-type"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-last-edited"
                          scope="col"
                        >
                          Last edited
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-action"
                          scope="col"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="nhsuk-table__body"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-radios__item"
                          >
                            <input
                              checked=""
                              class="nhsuk-radios__input"
                              data-testid="app-template-id-radio"
                              id="channelTemplate-app-template-id"
                              name="channelTemplate"
                              type="radio"
                              value="app-template-id"
                            />
                            <label
                              class="nhsuk-label nhsuk-radios__label"
                              for="channelTemplate-app-template-id"
                              id="channelTemplate-app-template-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          app template name
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          NHS App message
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <div
                            class="actionLinksWrapper"
                          >
                            <a
                              aria-label="Preview"
                              data-testid="app-template-id-preview-link"
                              href="/message-plans/choose-nhs-app-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/app-template-id"
                              id="preview-template-link-0"
                            >
                              Preview
                            </a>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <button
              aria-disabled="false"
              class="nhsuk-button"
              data-testid="submit-button"
              id="channel-template-submit-button"
              type="submit"
            >
              Save and continue
            </button>
            <a
              class="nhsuk-u-font-size-19 inline-block nhsuk-u-margin-left-3 nhsuk-u-padding-top-3"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ChooseChannelTemplate renders sms form 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <span
          class="nhsuk-caption-l"
        >
          Autumn Campaign Plan
        </span>
        <h1
          class="nhsuk-heading-l"
        >
          Choose a text message (SMS) template
        </h1>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="choose-channel-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <dl
            class="nhsuk-summary-list"
            data-testid="previous-selection-summary"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Previously selected template
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                sms template name
              </dd>
            </div>
          </dl>
          <div
            class="nhsuk-grid-row"
          >
            <div
              class="nhsuk-grid-column-full"
            >
              <div
                class="nhsuk-hint"
              >
                Choose one option
              </div>
              <div
                class="nhsuk-form-group"
              >
                <div
                  class="nhsuk-radios"
                  id="channelTemplate"
                >
                  <table
                    class="nhsuk-table-responsive"
                    data-testid="channel-templates-table"
                    id="channel-templates-table"
                  >
                    <thead
                      class="nhsuk-table__head"
                      role="rowgroup"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-select"
                          scope="col"
                        >
                          Select
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-name"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-type"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-last-edited"
                          scope="col"
                        >
                          Last edited
                        </th>
                        <th
                          class="nhsuk-table__header"
                          data-testid="channel-templates-table-header-template-action"
                          scope="col"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="nhsuk-table__body"
                    >
                      <tr
                        class="nhsuk-table__row"
                      >
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Select 
                          </span>
                          <div
                            class="nhsuk-radios__item"
                          >
                            <input
                              checked=""
                              class="nhsuk-radios__input"
                              data-testid="sms-template-id-radio"
                              id="channelTemplate-sms-template-id"
                              name="channelTemplate"
                              type="radio"
                              value="sms-template-id"
                            />
                            <label
                              class="nhsuk-label nhsuk-radios__label"
                              for="channelTemplate-sms-template-id"
                              id="channelTemplate-sms-template-id--label"
                            >
                               
                            </label>
                          </div>
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Name 
                          </span>
                          sms template name
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Type 
                          </span>
                          Text message (SMS)
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                            Last edited 
                          </span>
                          13th Jan 2025
                          <br />
                          10:19
                        </td>
                        <td
                          class="nhsuk-table__cell"
                          role="cell"
                        >
                          <span
                            aria-hidden="true"
                            class="nhsuk-table-responsive__heading"
                          >
                             
                          </span>
                          <div
                            class="actionLinksWrapper"
                          >
                            <a
                              aria-label="Preview"
                              data-testid="sms-template-id-preview-link"
                              href="/message-plans/choose-text-message-template/fbb81055-79b9-4759-ac07-d191ae57be34/preview-template/sms-template-id"
                              id="preview-template-link-0"
                            >
                              Preview
                            </a>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="nhsuk-form-group"
            data-testid="channel-template-actions"
          >
            <button
              aria-disabled="false"
              class="nhsuk-button"
              data-testid="submit-button"
              id="channel-template-submit-button"
              type="submit"
            >
              Save and continue
            </button>
            <a
              class="nhsuk-u-font-size-19 inline-block nhsuk-u-margin-left-3 nhsuk-u-padding-top-3"
              href="/message-plans/choose-templates/fbb81055-79b9-4759-ac07-d191ae57be34"
            >
              Go back
            </a>
          </div>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
